Update 《王者荣耀》走红的背后 .md

--- a/《王者荣耀》走红的背后 .md
+++ b/《王者荣耀》走红的背后 .md
@@ -42,25 +42,23 @@
 
 ![img](http://www.199it.com/wp-content/uploads/2018/07/1532187050-2012-0706.png)
 
-
-
 **移动游戏市场的兴盛**
 
 随着互联网技术和智能手机快速发展，这几年全球移动游戏市场迅疾增长，在整个游戏产业中占据举足轻重的地位，且势必继续主导全球游戏市场。
 
 根据《DUG：2018 年度全球移动互联网市场报告》，2018年，全球游戏市场总收入达 1379 亿美元，其中移动游戏市场占比首次过半。根据《App Annie：2019 移动市场报告》，2018 年移动游戏占到应用商店消费总支出的74 %，成为整个游戏市场上增长最快的一大领域。根据 Newzoo 的数据，移动游戏在 2018 年收入高达 703 亿美元，占全球游戏市场总收入的 51%，远超 PC 游戏和主机游戏。App Annie 预测，移动游戏将持续增长，并于2019年年底，占到消费者全平台游戏总支出的60%。
 
-![img](file:///C:/Users/XM/AppData/Local/YNote/data/floatlife@163.com/6b30d16431114cf2a0cbbc6c0cad2aa7/m.jpg.thumb.jpeg)
+![img](https://i.loli.net/2019/04/12/5cb05a2bcd43c.jpeg)
 
 根据《伽马数据：2018年全球移动游戏企业竞争力报告》，2018 年全球移动游戏用户规模超过 22 亿，亚太地区11.92 亿，全球最多，欧洲 3.2 亿、中东及非洲 3.2 亿，拉美 2.2 亿、北美 1.9 亿。
 
-![img](C:/Users/XM/AppData/Local/YNote/data/floatlife@163.com/7f763c0dcc5a4a39b471e8c493ac03af/guxwk18d9kg.jpeg)
+![img](https://i.loli.net/2019/04/12/5cb05a2bcd893.jpeg)
 
 而在中国，移动互联网崛起，国家持续加大政策扶持，借由通信技术、智能手机、移动支付的发展和普及，移动游戏产业爆发式增长，市场规模持续扩大，迎来发展的春天，成为文化产业的新亮点。
 
 根据《伽马数据：2018年全球移动游戏企业竞争力报告》，2018 年全球移动游戏市场规模达 632 亿美元 ，中国市场全球占比 30.8%，占比最大。根据《极光大数据：2018 年手机游戏行业研究报告》，截至 2018 年10月，中国手游 app 市场渗透率为 47.9%，用户规模为 5.27 亿，10 月行业月均 DAU 为 1.01亿。
 
-![img](C:/Users/XM/AppData/Local/YNote/data/floatlife@163.com/6e3f967e46ed43cea49f09d717d4ac6a/k6jkp3ghdtg.jpeg)
+![img](https://i.loli.net/2019/04/12/5cb05a2bcd56b.jpeg)
 
 **移动电子竞技的发展**
 
